--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+.banner{
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+}
+
+body {
+  background-image: url(https://img.freepik.com/vector-gratis/copia-espacio-fondo-blanco-ondulado_23-2148845471.jpg?w=740&t=st=1682553415~exp=1682554015~hmac=ed4d794c8678f23c41af688c6c523ac04084d0032d9fcf6e39268cfb00bea848);
+  /*background-image: url(https://www.todofondos.net/wp-content/uploads/1366x768-Fondo-simple-editar-y-descargar.-Aprendizaje-visual.jpg);*/
+  size: 1366px;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: white;
+  height: 50px;
+}
+
+.contenedor{
+  margin-top: 13px;
+}
+
+.opciones{
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: 5px 10px;
+  text-transform: uppercase;
+}
+
+.opciones:hover{
+  color: rgb(151, 15, 15);
+}
+
+.centrado{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fuente{
+  font-family: 'Bruno Ace SC', cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.naylogo{
+  background-size: cover;
+  width: 200px;
+  padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.descripcion{
+  font-size: 10px;
+  margin: 50px 100px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+  padding-top: 30px;
 }
